# image_proc

./: .gitignore
taskone/: BasicOperations.cpp  BasicOperations.h  CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.h  FilterOperations.cpp  FilterOperations.h  FourierTransform.cpp  FourierTransform.h  FrequencyFilters.cpp  FrequencyFilters.h  HelperFunctions.cpp  HelperFunctions.h  HistogramComputations.cpp  HistogramComputations.h  ImageCharacteristics.cpp  ImageCharacteristics.h  ImageSegmentation.cpp  ImageSegmentation.h  MorphologicalBasic.cpp  MorphologicalBasic.h  SimilarityMeasures.cpp  SimilarityMeasures.h  SpatialOperations.cpp  SpatialOperations.h  main.cpp
